Update tp1.html - final2

--- a/tp1.html
+++ b/tp1.html
@@ -120,10 +120,10 @@
 
     <h2>Exo 13</h2>
     <table style="border-collapse:collapse;">
-        <tr>
-            <th width="50%" style="border-bottom: 1px solid black; border-right: 1px solid black;" colspan="2">Produits</th>
-            <th style="border-bottom: 1px solid black;">Prix HTVA</th>
-            <th style="border-bottom: 1px solid black;">Prix TVAC</th>
+        <tr style="border-bottom: 1px solid black;">
+            <th width="50%" style="border-right: 1px solid black;" colspan="2">Produits</th>
+            <th>Prix HTVA</th>
+            <th>Prix TVAC</th>
         </tr>
         <tr>
             <td colspan="2" style="border-right:1px solid black">Lys</td>
@@ -148,10 +148,10 @@
 
     <h2>Exo 14</h2>
     <table style="border-collapse: collapse; width: 25%;">
-        <tr style="text-align: center;  border-bottom: 3px solid white;">
-            <th style="background-color: #4184B5; border-right:6px solid white;">FiLière E</th>
-            <th style="background-color: #4184B5; border-right: 6px solid white;">Majeur Info</th>
-            <th style="background-color: #4184B5;">Majeur Math</th>
+        <tr style="text-align: center;  border-bottom: 3px solid white; background-color: #4184B5;">
+            <th style="border-right:6px solid white;">Filière E</th>
+            <th style="border-right: 6px solid white;">Majeur Info</th>
+            <th>Majeur Math</th>
         </tr>
         <tr style="background-color: #B0E1E7; vertical-align: top;">
             <td style="border-right: 6px solid white;" rowspan="2">Proposer des formations originales au carrefour des mathématiques appliquées et de l'informatique</td>
